# Scientific_Spaces_AI_Learning_OS

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  alignment.md  docker-compose.yml  pytest.ini  roadmap.md
backend/: .gitkeep  Dockerfile  pyproject.toml
backend/app/: main.py  sync.py
backend/app/api/: articles.py  graph.py  learning.py  rag.py  tutor.py  zotero.py
backend/app/converter/: __init__.py  markdown.py
backend/app/core/: __init__.py
backend/app/corpus/: __init__.py  audit.py  inventory.py  materialization.py  pilot.py  seeds.py  year_enrichment.py
backend/app/crawler/: __init__.py  browser.py  cache.py  canonical.py  discovery.py  downloader.py  rss.py
backend/app/evaluation/: __init__.py  full_corpus.py  metrics.py  models.py  runner.py  tutor_full_corpus.py
backend/app/export/: __init__.py  (+5 more)
backend/tests/: operations_helpers.py  test_article_api.py  test_browser_provider.py  test_canonical_urls.py  test_crawler.py  test_evaluation_metrics.py  test_evaluation_runner.py  test_full_corpus_graph.py  test_full_corpus_pilot.py  test_full_corpus_rag_evaluation.py  test_full_corpus_rag_index.py  test_full_corpus_tutor_evaluation.py  test_graph.py  test_learning_api.py  test_learning_migration.py  test_learning_sqlite_store.py  test_live_access.py  test_llm_provider.py  test_local_corpus_audit.py  test_local_corpus_materialization.py  test_local_pdf_cli.py  test_local_pdf_core.py  test_local_pdf_html.py  test_local_pdf_renderer.py  test_local_pdf_worker.py  test_local_pdf_workflow.py  test_operations_backup_restore.py  test_operations_cleanup_health.py  test_operations_cli.py  test_operations_inventory.py  test_parser_converter.py  test_pdf_export.py  test_persistence_sqlite.py  test_rag_api.py  test_rag_chunking.py  test_rag_vector_search.py  test_real_provider_evaluation_operations.py  test_real_provider_evaluation_policy.py  test_real_provider_evaluation_runner.py  test_rss_discovery.py  (+8 more)
(+306 files in other folders)
