[project]
name = "scientific-spaces-backend"
version = "0.1.0"
description = "Backend engineering skeleton for Scientific Spaces AI Learning OS."
requires-python = ">=3.11,<3.12"
dependencies = [
    "beautifulsoup4>=4.12,<5.0",
    "faiss-cpu>=1.8,<2.0",
    "fastapi>=0.115,<1.0",
    "markdownify>=0.13,<2.0",
    "numpy>=1.26,<3.0",
    "playwright>=1.49,<2.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "httpx2>=2.0,<3.0",
    "pytest>=8.0,<10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "live: checks that contact the live Scientific Spaces source; skipped unless RUN_LIVE_TESTS=1 is set.",
    "browser_live: checks browser-based live Scientific Spaces access; skipped unless RUN_LIVE_TESTS=1 is set.",
    "pdf_live: checks live Scientific Spaces article PDF export; skipped unless RUN_LIVE_TESTS=1 is set.",
]
